# phoebe

./: .gitignore  LICENSE  README.md  analysis.ipynb  environment.yml  main.py  pyproject.toml
src/: data.py  models.py
